# autofdo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  INSTALL  Makefile.am  Makefile.in  OptimizeClangO3WithPropeller.md  README  README.md  README.rst  RELEASE.md  aclocal.m4  addr2cu.cc  addr2cu.h  addr2cu_test.cc  addr2line.cc  addr2line.h  addr2line_test.cc  base_profile_reader.h  bb_handle.h  binary_address_branch.h  binary_address_branch_path.h  branch_aggregation.cc  branch_aggregation.h  branch_aggregator.h  branch_frequencies.h  branch_frequencies_aggregator.h  branch_frequencies_autofdo_sample.cc  branch_frequencies_autofdo_sample.h  branch_frequencies_autofdo_sample_test.cc  config.h.in  configure  configure.ac  create_gcov.cc  create_llvm_prof.cc  disassembler_test.cc  dump_gcov.cc  file_util.h  (+162 more)
.github/workflows/: build-release-artifacts.yml  build-release.yml  ci.yml  cmake-single-platform.yml  create-release-build.yaml  main.yml
CodeLayout/: CodeLayout.cpp  CodeLayout.h  ModifiablePriorityQueue.h  NodeChain.cpp  NodeChain.h  NodeChainAssembly.cpp  NodeChainAssembly.h  NodeChainBuilder.cpp  NodeChainBuilder.h  NodeChainClustering.cpp  NodeChainClustering.h  PropellerCFG.cpp  PropellerCFG.h  PropellerConfig.cpp  PropellerConfig.h
base/: basictypes.h  common.h  integral_types.h  logging.h  macros.h  port.h  status_macros.h
chromiumos-wide-profiling/: Makefile  Makefile.external  OWNERS  README.google  address_mapper.cc  address_mapper.h  address_mapper_test.cc  buffer_reader.h  buffer_reader_test.cc  buffer_writer.cc  buffer_writer.h  buffer_writer_test.cc  conversion_utils.cc  conversion_utils.h  conversion_utils_test.cc  data_reader.cc  data_reader.h  data_writer.cc  data_writer.h  limits.h  perf_converter.cc  perf_data.pb.cc  perf_data.pb.h  perf_data.proto  perf_parser.cc  perf_parser.h  perf_parser_test.cc  perf_protobuf_io.cc  perf_protobuf_io.h  perf_reader.cc  perf_reader.h  perf_reader_test.cc  perf_recorder.cc  perf_recorder.h  perf_recorder_test.cc  perf_serializer.cc  perf_serializer.h  perf_serializer_test.cc  perf_test_files.h  quipper.cc  (+17 more)
chromiumos-wide-profiling/compat/: proto.h  string.h  test.h
chromiumos-wide-profiling/kernel/: perf_event.h  perf_internals.h
chromiumos-wide-profiling/mybase/base/: basictypes.h  logging.h
docs/: OptimizeClangO3WithPropeller.md
gflags/: gflags.cc
glog/src/: config.h.in  config.h.in~  demangle.cc
glog/src/windows/: config.h
m4/: ax_llvm.m4
quipper/: .gitignore  BUILD  METADATA  Makefile  Makefile.external  OWNERS  address_mapper.cc  address_mapper.h  address_mapper_test.cc  conversion_utils.cc  conversion_utils.h  conversion_utils_test.cc  perf_converter.cc  perf_data.proto  perf_parser.cc  perf_parser.h  perf_parser_test.cc  perf_protobuf_io.cc  perf_protobuf_io.h  perf_reader.cc  perf_reader.h  perf_reader_test.cc  perf_recorder.cc  perf_recorder.h  perf_recorder_test.cc  perf_serializer.cc  perf_serializer.h  perf_serializer_test.cc  perf_test_files.h  quipper.cc  quipper.gyp  quipper_proto.h  quipper_string.h  quipper_test.h  scoped_temp_path.cc  scoped_temp_path.h  sync_quipper.py  test_utils.cc  test_utils.h  test_utils_defs.cc  (+3 more)
quipper/kernel/: perf_internals.h
quipper/mybase/base/: basictypes.h  logging.h  macros.h
symbolize/: addr2line_inlinestack.cc  addr2line_inlinestack.h  dwarf2enums.h  dwarf2reader.cc  dwarf2reader.h  dwarf3ranges.cc  dwarf3ranges.h  elf_reader.cc  elf_reader.h  functioninfo.cc  functioninfo.h  line_state_machine.h
testdata/: callgraph_with_cycles.txt  duplicate_unique_names.out  hierarchical_discriminator_test.c  hierarchical_discriminator_test.x86_64  hierarchical_discriminator_test.x86_64.perf.data  jump_table_test.binary  llvm_autoprof.golden.binprof  llvm_autoprof.golden.textprof  llvm_function_samples.binary  llvm_testzero.golden.textprof  perf-kernel.data  perf-vmlinux.data  propeller_all_cold_landing_pads.protobuf  propeller_barebone_nopie_buildid.build-id  propeller_call_from_simple_loop.protobuf  propeller_clang_v0_labels.binary  propeller_from_icu_genrb  propeller_hot_and_cold_landing_pads.protobuf  propeller_loop_no_entry_no_exit.protobuf  propeller_multiple_cold_blocks.protobuf  propeller_nested_loop.protobuf  propeller_sample.arm.perfdata  propeller_sample.perfdata  propeller_sample.protobuf  propeller_sample_1.perfdata1  propeller_sample_cc_directives.arm.golden.txt  propeller_sample_cc_directives.golden.txt  propeller_sample_cc_directives.v0.golden.txt  propeller_sample_ld_directives.arm.golden.txt  propeller_sample_ld_directives.golden.txt  propeller_sample_section_cc_directives.golden.txt  propeller_sample_section_ld_directives.golden.txt  propeller_sample_split_only_cc_directives.golden.txt  propeller_sample_split_only_ld_directives.golden.txt  propeller_sample_verbose_cc_directives.golden.txt  propeller_simple_conditional.protobuf  propeller_simple_conditionals_join.protobuf  propeller_simple_loop.protobuf  propeller_simple_multi_function.protobuf  propeller_three_branches.protobuf  (+16 more)
util/symbolize/: addr2line_inlinestack.cc  addr2line_inlinestack.h  bytereader-inl.h  bytereader.cc  bytereader.h  dwarf2enums.h  dwarf2reader.cc  dwarf2reader.h  dwarf3ranges.cc  dwarf3ranges.h  elf_reader.cc  elf_reader.h  functioninfo.cc  functioninfo.h  index_helper.cc  index_helper.h  line_state_machine.h  nonoverlapping_range_map.h
util/testing/: status_matchers.h
